Se agrega el proyecto